[gd_scene load_steps=15 format=3 uid="uid://c4evtaglrpm6f"]

[ext_resource type="Script" path="res://floors/Dungeon_A/8_1.gd" id="1_nali1"]
[ext_resource type="Texture2D" uid="uid://bidw5ypcxt04n" path="res://sprites/floors/A/8_1.png" id="2_nd7qb"]
[ext_resource type="PackedScene" uid="uid://btymg45ij342p" path="res://player/Player.tscn" id="3_w7ci1"]
[ext_resource type="PackedScene" uid="uid://owiom6kwwpmy" path="res://environment/interactive/end_point/End_Point.tscn" id="4_ipva0"]
[ext_resource type="PackedScene" uid="uid://bqwdf8n5jlliu" path="res://environment/traps/pitfall/Pitfall.tscn" id="5_wuxy2"]
[ext_resource type="PackedScene" uid="uid://u1ute5oe5d4n" path="res://traps/GoldenDragon.tscn" id="6_xjde3"]
[ext_resource type="PackedScene" uid="uid://b4avbltaqwlpm" path="res://traps/Kapre.tscn" id="7_vrkwf"]
[ext_resource type="PackedScene" uid="uid://dtn8oh314a4hk" path="res://environment/traps/spikes/Spikes.tscn" id="8_bjqsb"]
[ext_resource type="PackedScene" uid="uid://c2rvlx78sd2ff" path="res://traps/Manananggal_v2.tscn" id="9_cljyk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fp7k"]
bg_color = Color(0.698039, 0.811765, 0.811765, 1)

[sub_resource type="Animation" id="Animation_13j0h"]
resource_name = "FloorName_FadeInOut"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FloorName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k8hxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FloorName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwyey"]
_data = {
"FloorName_FadeInOut": SubResource("Animation_13j0h"),
"RESET": SubResource("Animation_k8hxh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8ia0"]
size = Vector2(770, 59)

[node name="81" type="Node2D"]
script = ExtResource("1_nali1")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_nd7qb")

[node name="Player" parent="." instance=ExtResource("3_w7ci1")]
position = Vector2(132, 745)

[node name="FloorNamePanel" type="Panel" parent="Player"]
visible = false
self_modulate = Color(1, 1, 1, 0)
z_index = 4
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FloorName" type="RichTextLabel" parent="Player/FloorNamePanel"]
modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 195.0
offset_top = 225.0
offset_right = 614.0
offset_bottom = 308.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_4fp7k")
bbcode_enabled = true
text = "[center]LICH THRONE[/center]"
fit_content = true
autowrap_mode = 0

[node name="LabelAnim" type="AnimationPlayer" parent="Player/FloorNamePanel"]
libraries = {
"": SubResource("AnimationLibrary_iwyey")
}

[node name="EndPoint" parent="." instance=ExtResource("4_ipva0")]
position = Vector2(2213, 777)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(0, 982)
polygon = PackedVector2Array(-2, 1, 2290, 3, 2272, -150, 2035, -150, 1349, -263, 1349, -361, 2141, -546, 2141, -700, 1855, -700, 1734, -824, 1120, -824, 1008, -707, 203, -707, 203, -648, 1015, -648, 1015, -288, 884, -288, 884, -139, 635, -140, 635, -288, 490, -288, 490, -139, 46, -139, 46, -374, -6, -376)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(1392, 28.5)
shape = SubResource("RectangleShape2D_r8ia0")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(-4, 0, 0, 609, 936, 609, 936, 504, 111, 504, 111, 150, 941, 151, 1061, 32, 1060, -1)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(2400, 0)
polygon = PackedVector2Array(0, 1, -649, -1, -649, 49, -518, 177, -128, 177, -128, 521, -868, 649, -868, 668, -364, 720, -128, 720, -128, 832, 0, 832)

[node name="Pitfall" parent="." instance=ExtResource("5_wuxy2")]
position = Vector2(849, 450)
rotation = 3.14159
scale = Vector2(1.2, 1.2)

[node name="Pitfall2" parent="." instance=ExtResource("5_wuxy2")]
position = Vector2(560, 450)
rotation = 3.14159
scale = Vector2(1.2, 1.2)

[node name="Pitfall3" parent="." instance=ExtResource("5_wuxy2")]
position = Vector2(251, 450)
rotation = 3.14159
scale = Vector2(1.2, 1.2)

[node name="GoldenDragon" parent="." instance=ExtResource("6_xjde3")]
position = Vector2(1035, 644)

[node name="GoldenDragon2" parent="." instance=ExtResource("6_xjde3")]
position = Vector2(83, 363)
scale = Vector2(-1, 1)

[node name="GoldenDragon3" parent="." instance=ExtResource("6_xjde3")]
position = Vector2(1900, 138)

[node name="Pitfall4" parent="." instance=ExtResource("5_wuxy2")]
position = Vector2(1515, 85)

[node name="GoldenDragon4" parent="." instance=ExtResource("6_xjde3")]
position = Vector2(1035, 667)

[node name="GoldenDragon5" parent="." instance=ExtResource("6_xjde3")]
position = Vector2(83, 381)
scale = Vector2(-1, 1)

[node name="Kapre" parent="." instance=ExtResource("7_vrkwf")]
position = Vector2(565, 964)
scale = Vector2(0.82, 0.82)

[node name="Kapre2" parent="." instance=ExtResource("7_vrkwf")]
position = Vector2(1571, 964)
scale = Vector2(0.82, 0.82)

[node name="Kapre3" parent="." instance=ExtResource("7_vrkwf")]
position = Vector2(1909, 964)
scale = Vector2(0.82, 0.82)

[node name="Spikes" parent="." instance=ExtResource("8_bjqsb")]
position = Vector2(2205, 364)
scale = Vector2(0.7, 0.7)

[node name="Manananggal_v2" parent="." instance=ExtResource("9_cljyk")]
position = Vector2(2043, 340)

[node name="Manananggal_v3" parent="." instance=ExtResource("9_cljyk")]
position = Vector2(1765, 340)
